--- a/app/src/main/res/layout/listelement_roomlist.xml
+++ b/app/src/main/res/layout/listelement_roomlist.xml
@@ -16,6 +16,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Title"
-        android:textSize="16sp" />
+        android:text="1. Tom's room"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="18sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView_roomlist_owner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:paddingEnd="8dp"
+            android:singleLine="true"
+            android:text="@string/roomList_element_owner"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="14sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/textView_roomlist_usersAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:ellipsize="none"
+            android:singleLine="true"
+            android:text="@string/roomList_element_users"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="14sp" />
+    </LinearLayout>
 </LinearLayout>
