--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
-            android:text="@string/register_header"
+            android:text="@string/registration_header"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryText"
             android:textSize="36sp" />
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
             android:onClick="submit"
-            android:text="@string/register_submit"
+            android:text="@string/registration_submit"
             android:textAlignment="center" />
 
     </LinearLayout>
