--- a/app/src/main/res/layout/activity_roomlist.xml
+++ b/app/src/main/res/layout/activity_roomlist.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipelayout_roomlist_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,4 +13,4 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scrollbars="vertical" />
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
