--- a/app/src/main/res/layout/listelement_room_roll.xml
+++ b/app/src/main/res/layout/listelement_room_roll.xml
@@ -3,17 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="6dp"
+    android:paddingEnd="12dp"
+    android:paddingStart="12dp"
+    android:paddingTop="6dp">
 
-    <TextView
-        android:id="@+id/textView_room_element_userRolled"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="tom123 rolled"
-        android:textColor="@color/colorSecondaryText"
-        android:textSize="14sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView_room_element_userRolled"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="tom123 rolled"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/textView_room_element_createdDate"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="2019-05-15 21:24"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="10sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView_room_element_totalRoll"
@@ -23,7 +43,7 @@
         android:layout_weight="1"
         android:text="36"
         android:textColor="@color/colorPrimaryText"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <TextView
