--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -53,7 +53,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="textNoSuggestions|textVisiblePassword"
                 android:paddingRight="30dp"
                 android:singleLine="true"
                 android:textSize="16sp" />
